--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -152,6 +152,10 @@ University of New York, Manhattan, NY, USA}
 \affiliation{Observatories of the Carnegie Institution for
 Science, 813 Santa Barbara Street, Pasadena, CA 91101, USA}
 
+\author{Jacqueline K. Faherty}
+\affiliation{Department of Astrophysics, American Museum of Natural History,
+200 Central Park West, Manhattan, NY, USA}
+
 \begin{abstract}
 The rotational evolution of cool dwarfs is poorly constrained after $\sim$1-2
 Gyr due to a lack of precise ages and rotation periods for old main-sequence
