commas in the abstract

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -161,8 +161,8 @@ The rotational evolution of cool dwarfs is poorly constrained after $\sim$1-2
 Gyr due to a lack of precise ages and rotation periods for old main-sequence
 stars.
 \racomment{
-In this work, we use velocity dispersion as an age proxy, to reveal the
-temperature-dependent rotational evolution of low-mass \kepler\ dwarfs and
+In this work we use velocity dispersion as an age proxy to reveal the
+temperature-dependent rotational evolution of low-mass \kepler\ dwarfs, and
 demonstrate that kinematic ages could be a useful tool for calibrating
 gyrochronology in the future.
 }
