--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -278,8 +278,8 @@ stars in the Galactic thin disk to ascertain which populations are older and
 which younger, and draw conclusions about the rotational evolution of stars
 based on their implied relative ages.
 
-\racomment{ Kinematic ages have been used to explore the evolution of cool
-dwarfs many times in the past, \citep[\eg][]{reid1995, gizis2000, west2004,
+\racomment{ There is a long history of using kinematic ages to explore the
+evolution of cool dwarfs \citep[\eg][]{reid1995, gizis2000, west2004,
 west2006, schmidt2007, faherty2009, kiman2019}.
 For example, \citet{west2004, west2006} used the vertical distances of stars
 from the Galactic mid-plane as an age proxy, and found that the fraction of
@@ -539,9 +539,11 @@ core and envelope with time and mass \citep{spada2019}.
 
 \racomment{
 In the top panel of figure \ref{fig:vplot}, the \citet{angus2019}
-gyrochronology model is over-plotted for comparison.
-We used this model as an example, however all empirical gyrochronology models
-are similar in essence to the \citet{angus2019} relation and none is able to
+gyrochronology model is plotted for comparison with the data.
+This model was chosen as an example but there are many other empirical
+gyrochronology models we could have used.
+All the available empirical gyrochronology models are similar in essence to
+the \citet{angus2019} relation and, like that relation, none is able to
 reproduce the observed velocity dispersions, or capture the evolving shape of
 the period-\teff\ relations.
 The \citet{angus2019} relation is a new fully-empirical gyrochronology
